# sincpro_async_worker

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: 00-check_code_style.yml  02-run_test.yml
architecture/: event_loop_strategy.md  return_type_analysis.md
examples/: simple_async_task.py  simple_demo.ipynb  sincpro_async_worker_demo.ipynb
sincpro_async_worker/: __init__.py  core.py  dispatcher.py  event_loop.py  exceptions.py  task_queue.py  worker.py
sincpro_async_worker/domain/: dispatcher.py  queue.py  worker.py
sincpro_async_worker/infrastructure/: __init__.py  dispatcher.py  event_loop.py  event_loop_clean.py  worker.py
tests/: test_async_execution.py  test_base.py  test_dispatcher.py  test_event_loop.py  test_event_loop_threading.py  test_worker.py
