[project]
name = "sincpro-async-worker"
version = "0.1.0"
description = ""
authors = [
    {name = "Gutierrez, Andres",email = "andres.gutierrez@electric.ai"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "sincpro_async_worker"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
